compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__constant_string_concatenation_requires_v1_4.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 2441
expression: "pub const string = \"wibble\" ++ \"wobble\""
---
----- SOURCE CODE
pub const string = "wibble" ++ "wobble"

----- WARNING
warning: Incompatible rakun version range
  ┌─ /src/warning/wrn.rakun:1:20
  │
1 │ pub const string = "wibble" ++ "wobble"
  │                    ^^^^^^^^^^^^^^^^^^^^ This requires a Rakun version >= 1.4.0

Constant strings concatenation was introduced in version v1.4.0. But the
Rakun version range specified in your `rakun.toml` would allow this code to
run on an earlier version like v1.0.0, resulting in compilation errors!
Hint: Remove the version constraint from your `rakun.toml` or update it to be:

    rakun = ">= 1.4.0"
