compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__deprecated_type_used_as_case_clause.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n@deprecated(\"The type Animal has been deprecated.\")\npub record Animal {\n    Cat\n    Dog\n}\n\npub fn sound(animal) -> String {\n  case animal {\n    Dog -> \"Woof\"\n    Cat -> \"Meow\"\n  }\n}\n\npub fn main(){\n    let cat = Cat\n    sound(cat)\n}\n        "
---
warning: Deprecated value used
   ┌─ /src/warning/wrn.rakun:10:5
   │
10 │     Dog -> "Woof"
   │     ^^^ This value has been deprecated

It was deprecated with this message: The type Animal has been deprecated.

warning: Deprecated value used
   ┌─ /src/warning/wrn.rakun:11:5
   │
11 │     Cat -> "Meow"
   │     ^^^ This value has been deprecated

It was deprecated with this message: The type Animal has been deprecated.

warning: Deprecated value used
   ┌─ /src/warning/wrn.rakun:16:15
   │
16 │     let cat = Cat
   │               ^^^ This value has been deprecated

It was deprecated with this message: The type Animal has been deprecated.
