compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__deprecated_type_used_in_alias.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 919
expression: "\n@deprecated(\"Don't use this!\")\npub record Cat {\n    Cat(name: String)\n}\n\npub type Dog = Cat\n        "
---
----- SOURCE CODE

@deprecated("Don't use this!")
pub record Cat {
    Cat(name: String)
}

pub type Dog = Cat
        

----- WARNING
warning: Deprecated type used
  ┌─ /src/warning/wrn.rakun:7:16
  │
7 │ pub type Dog = Cat
  │                ^^^ This type has been deprecated

It was deprecated with this message: Don't use this!
