compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__doesnt_warn_twice_for_unreachable_code_if_has_already_warned_in_a_block_2.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n        pub fn main() {\n            let _ = {\n              panic\n              1 // warning here\n            }\n            \"no warning here!\"\n        }\n        "
---
----- SOURCE CODE

        pub fn main() {
            let _ = {
              panic
              1 // warning here
            }
            "no warning here!"
        }
        

----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.rakun:5:15
  │
5 │               1 // warning here
  │               ^

This code is unreachable because it comes after a `panic`.
